# magic-hour-mcp

./: .env.example  .gitignore  .mcp.json.example  README.md  integration-handoff.md  main.py  pyproject.toml  requests.http  user.md
docs/: ai-agent-go-live-instructions.md  api-reference.md  build_reference.py  detailed-step-by-step-integration.md  future-chat-ui-handoff.md  future-oauth-support.md  implementation-plan.md  integration-handoff.md  openapi.json
mcp_magichour/: auth.py  client.py  errors.py  instance.py  openapi_auth.py  openapi_policies.py  openapi_server.py  server.py  util.py
mcp_magichour/tools/: audio_projects.py  files.py  image_projects.py  video_projects.py
tests/: test_audio_projects.py  test_auth.py  test_client.py  test_errors.py  test_media_fetch.py  test_openapi_auth.py  test_openapi_policies.py  test_openapi_server.py
