[project]
name = "mcp-magichour"
version = "0.1.0"
description = "OpenAPI-backed MCP server wrapping the Magic Hour API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "starlette>=1.0.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_magichour*"]
